Fix T71063: GPencil - Numpad return key cannot be used to confirm primitive