source/blender/editors/gpencil/gpencil_interpolate.c
@@ -585,6 +585,7 @@ static int gpencil_interpolate_modal(bContext *C, wmOperator *op, const wmEvent 
 
   switch (event->type) {
     case LEFTMOUSE: /* confirm */
+    case PADENTER:
     case RETKEY: {
       /* return to normal cursor and header status */
       ED_area_status_text(tgpi->sa, NULL);
